# openagentio

./: .gitignore  README.md  ROADMAP.md  go.mod  go.sum
.github/workflows/: python-publish.yml
examples/echo-agent/: main.go
examples/http-gateway/: main.go
examples/streaming-llm/: main.go
pkg/bus/: adr010_test.go  bus.go  (+10 more)
schema/: README.md  envelope.schema.json
sdk/python/: README.md  pyproject.toml
sdk/python/examples/: echo_agent.py
sdk/python/src/agentflowbus/: __init__.py  session.py
sdk/python/src/agentflowbus/bus/: __init__.py  bus.py  stream.py
sdk/python/src/agentflowbus/codec/: __init__.py  json_codec.py
sdk/python/src/agentflowbus/event/: __init__.py  envelope.py  ids.py  payload.py
sdk/python/src/agentflowbus/transport/: __init__.py  inmem.py  nats.py
sdk/python/src/openagentio/: __init__.py  session.py
sdk/python/src/openagentio/adapter/: __init__.py
sdk/python/src/openagentio/adapter/http/: __init__.py  adapter.py  auth.py  envelope.py  errors.py  handlers.py  middleware.py  options.py
sdk/python/src/openagentio/bus/: __init__.py  bus.py  dlq.py  errors.py  options.py  stream.py  subjects.py
sdk/python/src/openagentio/codec/: __init__.py  json_codec.py
sdk/python/src/openagentio/event/: __init__.py  envelope.py  types.py
sdk/python/src/openagentio/middleware/: __init__.py  deadletter.py  logging.py  recover.py  retry.py  trace.py
sdk/python/src/openagentio/middleware/otel/: __init__.py  carrier.py  config.py  preparer.py  trace.py
sdk/python/src/openagentio/transport/: __init__.py  base.py  dial.py  inmem.py  nats.py
sdk/python/tests/: conftest.py  test_bus_errors.py  test_bus_options.py  test_bus_subscription_tracking.py  test_dlq.py  test_envelope.py  test_envelope_preparer.py  test_http_adapter.py  test_inmem_invoke.py  test_inmem_pubsub.py  test_inmem_stream.py  test_middleware_chain.py  test_middleware_deadletter.py  test_middleware_logging.py  test_middleware_otel.py  test_middleware_recover.py  test_middleware_retry.py  test_middleware_trace.py  test_nats_integration.py  test_session.py  test_transport_dial.py
(+39 files in other folders)
