[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "openagentio"
version = "0.2.0a2"
description = "Python SDK for OpenAgentIO — ACP-compatible Envelope protocol on top of NATS / asyncio."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "ModulationAI" },
]
keywords = ["agent", "bus", "nats", "acp", "asyncio"]
dependencies = [
  "nats-py>=2.6",
]

[project.optional-dependencies]
validation = ["jsonschema>=4.21"]
http = ["starlette>=0.37"]
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "jsonschema>=4.21",
  "starlette>=0.37",
  "httpx>=0.27",
  "opentelemetry-api>=1.20",
  "opentelemetry-sdk>=1.20",
]

[project.urls]
Homepage = "https://github.com/ModulationAI/openagentio"
Repository = "https://github.com/ModulationAI/openagentio"

[tool.hatch.build.targets.wheel]
packages = ["src/openagentio"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-ra"
